# taigu

./: .codespellrc  .gitignore  AGENTS.md  Makefile  MyNotes.md  Pipfile  Procfile  README.md  client_secret_85674097625-iqmtaroea8456oeh3461j2g8esb426ts.apps.googleusercontent.com.json  compose.dev.yaml  compose.prod.yaml  create_env_file  create_env_file.sh  crontab  deploy.sh  env.example  example.env  gunicorn.conf.py  latest.dump  local.dump  local.sql  manage.py  migrate.bat  migrate.sh  push  push.sh  pytest.ini  requirements.txt  runtest  runtest.sh  update.bat
api-server/: .dockerignore  Dockerfile  Pipfile  client_secret_85674097625-iqmtaroea8456oeh3461j2g8esb426ts.apps.googleusercontent.com.json  gunicorn.conf.py  manage.py  pyproject.toml  ruff.toml  scheduler.py
api-server/main/: env.py  settings.py  settings_prod.py  urls.py
api-server/main/account/: __init__.py  apps.py  backends.py  middleware.py  models.py  urls.py  utils.py  views.py
api-server/main/account/migrations/: 0001_initial.py  0002_alter_user_id_alter_user_is_active.py  0003_alter_user_oauth_id.py  0004_remove_user_is_staff.py
api-server/main/account/tests/: test_models.py
api-server/main/cash_dividend/: apps.py  models.py  urls.py  views.py
api-server/main/cash_dividend/migrations/: 0001_initial.py
api-server/main/core/: apps.py  cache.py  data_change.py  decorators.py  env.py  models.py
api-server/main/core/decorators/: auth.py  rate_limit.py
api-server/main/core/migrations/: 0001_initial.py
api-server/main/crontab/: apps.py
api-server/main/favorite/: apps.py  models.py  urls.py  views.py
api-server/main/favorite/migrations/: 0001_initial.py  0002_move_company_fk_to_market.py
api-server/main/handling_fee/: apps.py  models.py  urls.py  views.py
api-server/main/handling_fee/migrations/: 0001_initial.py  (+1 more)
api-server/main/market/: apps.py  models.py  services.py  urls.py  views.py
api-server/main/memo/: apps.py  models.py  urls.py  views.py
api-server/main/stock/: __init__.py  apps.py  cache.py  models.py  services.py  urls.py
api-server/main/stock_memo/: apps.py  models.py  urls.py  views.py
api-server/main/trade_plan/: apps.py  models.py  urls.py  views.py
api-server/main/trade_record/: apps.py  models.py  urls.py  views.py
main/: settings.py  (+3 more)
(+537 files in other folders)
