[project]
name = "taigu"
version = "1.0.0"
description = ""
authors = [
    {name = "Bing-Yang Chen",email = "bryan.chen.429@gmail.com"}
]
readme = "README.md"
requires-python = "==3.13.3"
dependencies = [
    "django (==5.2.9)",
    "gunicorn (==22.0.0)",
    "requests (==2.32.2)",
    "pyquery (==1.4.3)",
    "django-cors-headers (==4.0.0)",
    "django-csp (==3.8)",
    "python-dateutil (==2.8.2)",
    "pytest-django (==4.8.0)",
    "google-api-python-client (==2.137.0)",
    "google-auth (==2.32.0)",
    "google-auth-oauthlib (==1.2.1)",
    "google-auth-httplib2 (==0.2.0)",
    "python-jose[cryptography] (==3.4.0)",
    "redis (==5.0.8)",
    "pydantic (==2.8.2)",
    "psycopg[binary] (==3.2.9)",
    "urllib3 (==2.6.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
poetry = "2.0"
codespell = "2.4.1"
ruff = "0.12.8"

[tool.pytest.ini_options]
python_files = "test_*.py"
DJANGO_SETTINGS_MODULE = "main.settings"
addopts = "-p no:cacheprovider --cache-clear"
